Excluding certain data.table functions that clash with dplyer

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -1,4 +1,4 @@
-exportPattern("^[[:alpha:]]+")
+epexportPattern("^[[:alpha:]]+")
 importFrom(magrittr,"%>%")
 importFrom(rlang,"%||%")
 importFrom(rlang,"!!!")
@@ -12,4 +12,4 @@ import(dplyr)
 import(sqldf)
 import(stringr)
 import(tidyr)
-import(data.table)
+import(data.table, except = c(first, last, between))
