--- a/NAMESPACE
+++ b/NAMESPACE
@@ -1,4 +1,4 @@
-epexportPattern("^[[:alpha:]]+")
+exportPattern("^[[:alpha:]]+")
 importFrom(magrittr,"%>%")
 importFrom(rlang,"%||%")
 importFrom(rlang,"!!!")
@@ -12,4 +12,4 @@ import(dplyr)
 import(sqldf)
 import(stringr)
 import(tidyr)
-import(data.table, except=c(first, last, between))
+import(data.table, except = c(first, last, between))
