Excluding clashing functions from data.table that were being overwritten by lubridate

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,5 +12,5 @@ import(dplyr)
 import(sqldf)
 import(stringr)
 import(tidyr)
-import(data.table, except = c(first, last, between))
+import(data.table, except = c(first, last, between, month, hour, quarter, week, year, wday, second, minute, mday, yday, isoweek))
 import(lubridate)
